--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
+    "build:netlify": "vite build && node scripts/prerender.js",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -59,8 +60,8 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
-    "react-hook-form": "^7.53.0",
     "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
@@ -74,6 +75,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@netlify/plugin-lighthouse": "^6.0.1",
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20.19.9",
     "@types/react": "^18.3.3",
