Revert "fixed build error, and performance improvements"
This reverts commit e39c1ed9c7b2893e553800c23c1b1f2182692229.

--- a/netlify.toml
+++ b/netlify.toml
@@ -7,8 +7,8 @@
   NODE_VERSION = "18"
 
 # Enable prerendering for better SEO
-# [[plugins]]
-#   package = "@netlify/plugin-lighthouse"
+[[plugins]]
+  package = "@netlify/plugin-lighthouse"
 
 # Redirect all routes to index.html for SPA
 [[redirects]]
