--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@netlify/plugin-lighthouse": "^6.0.1",
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20.19.9",
     "@types/react": "^18.3.3",
@@ -88,7 +89,6 @@
     "lovable-tagger": "^1.1.8",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
-    "terser": "^5.43.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.38.0"
   }
